--- a/metadata.yaml
+++ b/metadata.yaml
@@ -25,5 +25,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'TX'
 - !lcsh 'Liquors'
+- GITenberg
 title: The Ideal Bartender
 url: http://www.gutenberg.org/ebooks/13487
